# cryptovault-classical

./: .gitignore  LICENSE  README.md  pyproject.toml
cryptovault/: __init__.py  cli.py
cryptovault/ciphers/: __init__.py  adfgvx.py  affine.py  atbash.py  bacon.py  base.py  bifid.py  binary_utils.py  caesar.py  foursquare.py  hill.py  monoalphabetic.py  myszkowski.py  playfair.py  porta.py  railfence.py  transposition.py  trifid.py  vernam.py  vigenere.py
cryptovault/cryptanalysis/: __init__.py  adfgvx_cracker.py  affine_cracker.py  bifid_cracker.py  caesar_cracker.py  frequency.py  hill_cracker.py  index_of_coincidence.py  kasiski.py  playfair_cracker.py  railfence_cracker.py
cryptovault/keymanagement/: __init__.py  diffie_hellman.py  generator.py  keystore.py  rotation.py
cryptovault/protocols/: __init__.py  channel.py  envelope.py  mac.py  signing.py
docs/dtp/: 00-executive-summary.md  01-architecture.md  02-deployment.md  03-versioning.md  04-testing.md  05-security.md  06-web-portal.md  07-references.md
docs/scientific/: paper.md  research-statement.md
tests/: test_ciphers.py  test_cryptanalysis.py  test_keymanagement.py
web/api/: main.py  models.py
web/api/routers/: analysis.py  cipher.py  ciphers.py  labs.py
web/static/: index.html
web/static/css/: portal.css
web/static/game/: app.js  ciphersLite.js  islandModel.js  puzzleEngine.js  sessionLite.js
web/static/js/: analysis.js  app.js  cipher.js  labs.js  refs.js
